--- a/SustainabilityAppV1/Base.lproj/Main.storyboard
+++ b/SustainabilityAppV1/Base.lproj/Main.storyboard
@@ -98,6 +98,16 @@
                                     </mask>
                                 </variation>
                             </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Incorrect email or password" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yfi-eP-Fel">
+                                <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="12"/>
+                                <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                    <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="12"/>
+                                    <rect key="frame" x="126" y="313" width="148" height="21"/>
+                                </variation>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.53321890479494616" green="0.79878566576086962" blue="0.47453487685173584" alpha="0.71999999999999997" colorSpace="calibratedRGB"/>
                         <constraints>
@@ -110,6 +120,8 @@
                                 <variation key="heightClass=regular-widthClass=compact" constant="15"/>
                             </constraint>
                             <constraint firstAttribute="centerX" secondItem="Whu-91-IML" secondAttribute="centerX" id="gER-lr-JnM"/>
+                            <constraint firstItem="yfi-eP-Fel" firstAttribute="top" secondItem="hV2-RP-FI6" secondAttribute="bottom" constant="15" id="kGu-9m-QQB"/>
+                            <constraint firstAttribute="centerX" secondItem="yfi-eP-Fel" secondAttribute="centerX" id="mut-cF-hpx"/>
                             <constraint firstAttribute="centerX" secondItem="AbW-07-BmS" secondAttribute="centerX" id="r7b-x4-jNt"/>
                             <constraint firstItem="AbW-07-BmS" firstAttribute="top" secondItem="Whu-91-IML" secondAttribute="bottom" constant="3" id="tjS-rN-iYn"/>
                             <constraint firstAttribute="centerX" secondItem="lo7-id-1RW" secondAttribute="centerX" id="uZD-jR-HyS"/>
@@ -117,6 +129,9 @@
                             <constraint firstItem="Whu-91-IML" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="15" id="z1M-PW-mbC"/>
                         </constraints>
                         <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="yfi-eP-Fel"/>
+                            </mask>
                             <mask key="constraints">
                                 <exclude reference="gER-lr-JnM"/>
                                 <exclude reference="z1M-PW-mbC"/>
@@ -128,9 +143,14 @@
                                 <exclude reference="uZD-jR-HyS"/>
                                 <exclude reference="ZAK-kI-y0r"/>
                                 <exclude reference="ufz-u2-GJf"/>
+                                <exclude reference="kGu-9m-QQB"/>
+                                <exclude reference="mut-cF-hpx"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="yfi-eP-Fel"/>
+                            </mask>
                             <mask key="constraints">
                                 <include reference="gER-lr-JnM"/>
                                 <include reference="z1M-PW-mbC"/>
@@ -142,12 +162,15 @@
                                 <include reference="uZD-jR-HyS"/>
                                 <include reference="ZAK-kI-y0r"/>
                                 <include reference="ufz-u2-GJf"/>
+                                <include reference="kGu-9m-QQB"/>
+                                <include reference="mut-cF-hpx"/>
                             </mask>
                         </variation>
                     </view>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
                     <connections>
                         <outlet property="email" destination="2Jc-5L-73R" id="4aA-Nq-WRu"/>
+                        <outlet property="incorrectLoginLabel" destination="yfi-eP-Fel" id="Z6R-UZ-55R"/>
                         <outlet property="password" destination="lo7-id-1RW" id="SHZ-9d-sEe"/>
                     </connections>
                 </viewController>
@@ -158,7 +181,7 @@
         <!--newUserController-->
         <scene sceneID="zDQ-zD-kBF">
             <objects>
-                <viewController title="newUserController" id="0Ir-4E-hxe" customClass="NewUserController" customModule="SustainabilityAppV1" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="newUser" title="newUserController" id="0Ir-4E-hxe" customClass="NewUserController" customModule="SustainabilityAppV1" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="ov2-11-r07"/>
                         <viewControllerLayoutGuide type="bottom" id="Kx7-QS-xFM"/>
@@ -186,6 +209,28 @@
                                     <mask key="constraints">
                                         <include reference="4Jz-IT-Wqz"/>
                                         <include reference="Ta3-fe-cuP"/>
+                                    </mask>
+                                </variation>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Phone (optional)" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MIN-FH-U4n">
+                                <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="D6y-dF-evW"/>
+                                    <constraint firstAttribute="height" constant="30" id="UMe-Te-5XJ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numbersAndPunctuation" returnKeyType="next"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="D6y-dF-evW"/>
+                                        <exclude reference="UMe-Te-5XJ"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="74" y="168" width="250" height="30"/>
+                                    <mask key="constraints">
+                                        <include reference="D6y-dF-evW"/>
+                                        <include reference="UMe-Te-5XJ"/>
                                     </mask>
                                 </variation>
                             </textField>
@@ -266,28 +311,26 @@
                                     </mask>
                                 </variation>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Phone (optional)" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MIN-FH-U4n">
-                                <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Leaf.png" translatesAutoresizingMaskIntoConstraints="NO" id="ZT7-5p-c6k">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="250" id="D6y-dF-evW"/>
-                                    <constraint firstAttribute="height" constant="30" id="UMe-Te-5XJ"/>
+                                    <constraint firstAttribute="height" constant="27" id="LGZ-7f-0mZ"/>
+                                    <constraint firstAttribute="width" constant="50" id="qYc-Ds-Koq"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numbersAndPunctuation" returnKeyType="next"/>
                                 <variation key="default">
                                     <mask key="constraints">
-                                        <exclude reference="D6y-dF-evW"/>
-                                        <exclude reference="UMe-Te-5XJ"/>
+                                        <exclude reference="LGZ-7f-0mZ"/>
+                                        <exclude reference="qYc-Ds-Koq"/>
                                     </mask>
                                 </variation>
                                 <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="74" y="168" width="250" height="30"/>
+                                    <rect key="frame" x="274" y="103" width="50" height="27"/>
                                     <mask key="constraints">
-                                        <include reference="D6y-dF-evW"/>
-                                        <include reference="UMe-Te-5XJ"/>
+                                        <include reference="LGZ-7f-0mZ"/>
+                                        <include reference="qYc-Ds-Koq"/>
                                     </mask>
                                 </variation>
-                            </textField>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.5332189048" green="0.79878566579999999" blue="0.47453487690000001" alpha="0.71999999999999997" colorSpace="calibratedRGB"/>
                         <constraints>
@@ -300,21 +343,24 @@
                             <constraint firstItem="pvi-58-EPT" firstAttribute="top" secondItem="MIN-FH-U4n" secondAttribute="bottom" constant="1" id="F5T-5D-HbB">
                                 <variation key="heightClass=regular-widthClass=compact" constant="0.0"/>
                             </constraint>
+                            <constraint firstItem="bfg-yk-0yH" firstAttribute="top" secondItem="ZT7-5p-c6k" secondAttribute="bottom" constant="5" id="J3B-eF-1e5"/>
                             <constraint firstItem="MIN-FH-U4n" firstAttribute="top" secondItem="nmO-8h-8Md" secondAttribute="bottom" constant="1" id="Qf0-E3-Tq2">
                                 <variation key="heightClass=regular-widthClass=compact" constant="0.0"/>
                             </constraint>
                             <constraint firstItem="nmO-8h-8Md" firstAttribute="top" secondItem="ov2-11-r07" secondAttribute="bottom" constant="50" id="SWG-IT-eBm"/>
                             <constraint firstItem="bfg-yk-0yH" firstAttribute="top" secondItem="ov2-11-r07" secondAttribute="bottom" constant="50" id="gQZ-CQ-6dj"/>
                             <constraint firstItem="MIN-FH-U4n" firstAttribute="leading" secondItem="nmO-8h-8Md" secondAttribute="leading" id="mcA-Qc-OGz"/>
+                            <constraint firstItem="ZT7-5p-c6k" firstAttribute="trailing" secondItem="bfg-yk-0yH" secondAttribute="trailing" id="nwH-Gh-O1V"/>
                             <constraint firstAttribute="centerX" secondItem="pvi-58-EPT" secondAttribute="centerX" id="rA6-DM-ZOq"/>
                         </constraints>
                         <variation key="default">
                             <mask key="subviews">
                                 <exclude reference="bfg-yk-0yH"/>
+                                <exclude reference="MIN-FH-U4n"/>
                                 <exclude reference="oCu-GW-5la"/>
                                 <exclude reference="nmO-8h-8Md"/>
                                 <exclude reference="pvi-58-EPT"/>
-                                <exclude reference="MIN-FH-U4n"/>
+                                <exclude reference="ZT7-5p-c6k"/>
                             </mask>
                             <mask key="constraints">
                                 <exclude reference="SWG-IT-eBm"/>
@@ -324,18 +370,21 @@
                                 <exclude reference="mcA-Qc-OGz"/>
                                 <exclude reference="F5T-5D-HbB"/>
                                 <exclude reference="rA6-DM-ZOq"/>
+                                <exclude reference="J3B-eF-1e5"/>
                                 <exclude reference="gQZ-CQ-6dj"/>
                                 <exclude reference="Dbi-7h-75C"/>
                                 <exclude reference="EGT-Hp-BRz"/>
+                                <exclude reference="nwH-Gh-O1V"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
                             <mask key="subviews">
                                 <include reference="bfg-yk-0yH"/>
+                                <include reference="MIN-FH-U4n"/>
                                 <include reference="oCu-GW-5la"/>
                                 <include reference="nmO-8h-8Md"/>
                                 <include reference="pvi-58-EPT"/>
-                                <include reference="MIN-FH-U4n"/>
+                                <include reference="ZT7-5p-c6k"/>
                             </mask>
                             <mask key="constraints">
                                 <include reference="SWG-IT-eBm"/>
@@ -345,9 +394,11 @@
                                 <include reference="mcA-Qc-OGz"/>
                                 <include reference="F5T-5D-HbB"/>
                                 <include reference="rA6-DM-ZOq"/>
+                                <include reference="J3B-eF-1e5"/>
                                 <include reference="gQZ-CQ-6dj"/>
                                 <include reference="Dbi-7h-75C"/>
                                 <include reference="EGT-Hp-BRz"/>
+                                <include reference="nwH-Gh-O1V"/>
                             </mask>
                         </variation>
                     </view>
